--- a/exHTML5/index.html
+++ b/exHTML5/index.html
@@ -21,6 +21,7 @@
         <div class="group group1">group1</div>
         <div class="group group2">group2</div>
         <div class="group group3">group3</div>
+        <!-- <div class="clearfix"></div> -->
       </main>
       <article class="slogan">slogan</article>
       <footer class="footer">
