--- a/exHTML5/index.html
+++ b/exHTML5/index.html
@@ -41,17 +41,17 @@
               >
               <ul class="sub-menu sub-menu1">
                 <li>
-                  <a href="#">HTML5 소개</a>
+                  <a href="#" class="icon-dot-circled">HTML5 소개</a>
                 </li>
                 <li>
-                  <a href="#">레퍼런스 소개</a>
+                  <a href="#" class="icon-dot-circled">레퍼런스 소개</a>
                 </li>
                 <li>
-                  <a href="#">활용예제</a>
+                  <a href="#" class="icon-dot-circled">활용예제</a>
                 </li>
               </ul>
             </li>
-            <li class="menu-item" tabindex="0">
+            <li class="menu-item">
               <a
                 href="#"
                 class="menu-button"
@@ -75,7 +75,7 @@
                 </li>
               </ul>
             </li>
-            <li class="menu-item" tabindex="0">
+            <li class="menu-item">
               <a
                 href="#"
                 class="menu-button"
@@ -96,7 +96,7 @@
                 </li>
               </ul>
             </li>
-            <li class="menu-item" tabindex="0">
+            <li class="menu-item">
               <a
                 href="#"
                 class="menu-button"
@@ -120,7 +120,7 @@
                 </li>
               </ul>
             </li>
-            <li class="menu-item" tabindex="0">
+            <li class="menu-item">
               <a
                 href="#"
                 class="menu-button"
@@ -147,7 +147,7 @@
                 </li>
               </ul>
             </li>
-            <li class="menu-item" tabindex="0">
+            <li class="menu-item">
               <a
                 href="#"
                 class="menu-button"
