--- a/exHTML5/index.html
+++ b/exHTML5/index.html
@@ -36,17 +36,17 @@
               >
               <ul class="sub-menu sub-menu1">
                 <li>
-                  <a href="#">HTML5 소개</a>
+                  <a href="#" class="icon-dot-circled">HTML5 소개</a>
                 </li>
                 <li>
-                  <a href="#">레퍼런스 소개</a>
+                  <a href="#" class="icon-dot-circled">레퍼런스 소개</a>
                 </li>
                 <li>
-                  <a href="#">활용예제</a>
+                  <a href="#" class="icon-dot-circled">활용예제</a>
                 </li>
               </ul>
             </li>
-            <li class="menu-item" tabindex="0">
+            <li class="menu-item">
               <a
                 href="#"
                 class="menu-button"
@@ -70,7 +70,7 @@
                 </li>
               </ul>
             </li>
-            <li class="menu-item" tabindex="0">
+            <li class="menu-item">
               <a
                 href="#"
                 class="menu-button"
@@ -91,7 +91,7 @@
                 </li>
               </ul>
             </li>
-            <li class="menu-item" tabindex="0">
+            <li class="menu-item">
               <a
                 href="#"
                 class="menu-button"
@@ -115,7 +115,7 @@
                 </li>
               </ul>
             </li>
-            <li class="menu-item" tabindex="0">
+            <li class="menu-item">
               <a
                 href="#"
                 class="menu-button"
